tests/fixtures/invalid/dict_div_str.py
# Cannot divide Dict[str, int] and Str
x: float = {"a": 1} / "hello"
